Changes to squid-1.1.beta25 ():

	- Check if we should delete-behind large objects when above LOW
	  water mark.
	- Merged request header parsing code from http.c and pass.c
	  into httpBuildRequestHeader().
	- Fixed 'rm -rf' command in store.c.
	- Changed viz_hack stuff to use multicast.

Changes to squid-1.1.beta24 ():

	- Added 'cache_stoplist_pattern' to squid.conf
	- Remove trailing slashes from FTP URLs.
	- Added 'passthrough_proxy' support.
	- Added "default parent" support with a 'default' option for
	  cache_host config line.
	- Upgraded autoconf to 2.10.
	- Strip Proxy-Connection request headers.
	- Do not return UDP_HIT for objects which will soon be stale.
	- Parse/Filter HTTP request headers in passthrough module.
	- Fixed parsing hostnames with dashes in 'src' ACLs.
	- Added warning message when forwarding loops detected.
	- Split getSingleParent() into getSingleParent() and
	  neighborsCount().
	- Dont check sibling caches for REFRESH requests.
	- Add X-Forwarded-For: header which is the comma-separated
	  list of client addresses along the request path.
	- Fixed icpDetectClientClose() to check if Content-Length
	  bytes have been delivered.

Changes to squid-1.1.beta23 (November 25, 1996):

	- Fixed "viabuf" memory leak.

Changes to squid-1.1.beta22 (November 25, 1996):

	- Fixed xstrncpy() bug in mime_get_header().
	- Fixed Via: header.
	- Fixed Host: header for proxy requests.
	- Fixed re-initializing client_db and net_db hash tables upon
	  SIGHUP (Cord Beermann).
	- Mucked with regex stuff so HP users don't have to put up with
	  GNUregex (Markus Gyger).
	- Changed SQUID_MAXFD back to FD_SETSIZE.
	- Fixed checking Max-age in httpSendRequest().
	- Made failure to fork ftpget fatal.
	- Call *FreeMemory() routines only if debugging.

Changes to squid-1.1.beta21 (November 22, 1996):

	- Fixed setting entry->timestamp for NOT MODIFIED replies.
	- Changed old HTTP/1.1 Forwarded: header to new Via:.